--- a/templates/static/my-app/package.json
+++ b/templates/static/my-app/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "my-app",
+  "name": "akatat",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.13.2",
+    "lodash": "^4.17.21",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
